--- a/Pentagram.css
+++ b/Pentagram.css
@@ -1,5 +1,5 @@
 @import url(https://raw.githubusercontent.com/wockstarszsz/Pentagram/main/SettingsIcons.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BlurpleRecolor/BlurpleRecolor.css);
+@import url(https://raw.githubusercontent.com/wockstarszsz/Pentagram/main/BlurpleRecolor.css);
 
 :root {
 	--transparencycolor:			0, 0, 0;
