--- a/BlurpleRecolor.css
+++ b/BlurpleRecolor.css
@@ -1,5 +1,5 @@
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/ThemeDevBadge.css);
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/ThemeDevBadge.css);
+@import url(https://raw.githubusercontent.com/wockstarszsz/Pentagram/main/ThemeDevBadge.css);
+@import url(https://raw.githubusercontent.com/wockstarszsz/Pentagram/main/ThemeDevBadge.css);
 
 :root {
 	--accentcolor:				88, 101, 242;
