--- a/Pentagram.theme.css
+++ b/Pentagram.theme.css
@@ -1,4 +1,4 @@
-@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/BasicBackground/BasicBackground.css);
+@import url(https://raw.githubusercontent.com/wockstarszsz/Pentagram/main/Pentagram.css);
 
 :root {
 	--transparencycolor:		0, 0, 0;
